erDiagram
    User {
        Guid userId PK
        String role "Consumer, Technician, Admin"
    }
    Device {
        Guid deviceId PK
        String pushToken
        String platform
    }
    Brand {
        Guid brandId PK
        String name
        String status
    }
    ProductModel {
        Guid productModelId PK
        String name
        String sku
    }
    UserProduct {
        Guid userProductId PK
        String serialNumber
        Date purchaseDate
    }
    OwnershipTransferRequest {
        Guid transferRequestId PK
        String status
        Date expiresAt
    }
    Invoice {
        Guid invoiceId PK
        String blobUrl
        String ocrStatus
    }
    Address {
        Guid addressId PK
        String street
        String city
        Geometry location
    }
    ServiceCenter {
        Guid serviceCenterId PK
        String name
        String status
    }
    ServiceCenterBrand {
        Guid serviceCenterId PK
        Guid brandId PK
    }
    ServiceAreaPolygon {
        Guid serviceAreaPolygonId PK
        Geometry polygon
    }
    ServiceAreaPostalCode {
        Guid serviceAreaPostalCodeId PK
        String postalCode
    }
    IssueType {
        Guid issueTypeId PK
        String name
        String category
    }
    ServiceRequest {
        Guid serviceRequestId PK
        String status
        String priority
    }
    ChatMessage {
        Guid chatMessageId PK
        DateTime sentAt PK
        String content
    }
    GpsLocationHistory {
        BIGSERIAL locationId PK
        DateTime timestamp PK
        Double latitude
        Double longitude
    }
    CustomerSignature {
        Guid signatureId PK
        String blobUrl
        DateTime signedAt
    }
    AuditLog {
        BIGSERIAL auditLogId PK
        DateTime timestamp PK
        String action
        Json changes
    }

    User ||--o{ Device : "has devices"
    User ||--o{ UserProduct : "owns products"
    User ||--o{ OwnershipTransferRequest : "initiates transfers"
    User ||--o{ ServiceRequest : "assigned as technician"
    User ||--o{ ChatMessage : "sends messages"
    User ||--o{ GpsLocationHistory : "tracks technician location"
    User ||--o{ AuditLog : "performs actions"

    Brand ||--o{ ProductModel : "defines models"
    Brand ||--o{ User : "managed by admins"
    Brand ||--o{ ServiceCenterBrand : "authorized for service"
    Brand ||--o{ ServiceRequest : "associated requests"

    ProductModel ||--o{ UserProduct : "instantiated as"
    ProductModel ||--o{ ServiceRequest : "related requests"

    UserProduct ||--o{ OwnershipTransferRequest : "subject of transfer"
    UserProduct ||--o| Invoice : "proven by"
    UserProduct ||--o{ ServiceRequest : "requires service"

    ServiceCenter ||--o{ User : "employs staff"
    ServiceCenter ||--o{ ServiceAreaPolygon : "serves geo-areas"
    ServiceCenter ||--o{ ServiceAreaPostalCode : "serves postal-zones"
    ServiceCenter ||--o{ ServiceRequest : "manages requests"
    ServiceCenter ||--o{ ServiceCenterBrand : "services brands"
    ServiceCenter ||--|| Address : "located at"

    IssueType ||--o{ ServiceRequest : "categorizes"

    ServiceRequest ||--o{ ChatMessage : "contains conversation"
    ServiceRequest ||--o{ GpsLocationHistory : "has travel history"
    ServiceRequest ||--o| CustomerSignature : "verified by"